--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ a {
     font-size: 5rem;
     text-align: left;
     padding: 0 0;
-    margin: 0 0;
+    margin: 1rem 0;
     margin-left: 2rem;
 }
 
