--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ a {
     font-weight: 150;
     letter-spacing: 0.1rem;
     font-size: 1.5rem;
+    line-height: 1.75rem;
     margin: 0 0;
 }
 
