--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 1rem;
 }
 
 #dud-image-container img {
